# SIMJI-Rust

./: Cargo.toml  README.md
data/: example.asm
src/: args.rs  assembler.rs  main.rs  vm.rs
