[package]
name = "simji_rust"
version = "0.1.0"
edition = "2021"
author = "Alexandre F. <nightlyside@gmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for argument parsing
clap = { version = "3.0.5", features = ["derive"] }

# for const map
phf = { version = "0.10.1", features = ["macros"] }